--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "av-ts": "^0.9.1",
+    "firebase": "^4.6.2",
     "install": "^0.10.1",
-    "vue": "^2.5.2",
+    "vue": "^2.5.3",
     "vue-router": "^3.0.1",
+    "vuefire": "^1.4.4",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
