--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^4.6.2",
     "install": "^0.10.1",
     "vue": "^2.5.3",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.4",
     "vuex-router-sync": "^5.0.0"
