--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   },
   "dependencies": {
     "av-ts": "^0.9.1",
-    "firebase": "^4.6.2",
+    "firebase": "^4.7.0",
     "install": "^0.10.1",
     "vue": "^2.5.3",
+    "vue-head": "^2.0.11",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
     "vuefire": "^1.4.4",
@@ -50,6 +51,7 @@
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^3.14.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^3.0.0",
